testdata/baselines/reference/compiler/tluaDottedFunctionNonEmptyTable.errors.txt
tluaDottedFunctionNonEmptyTable.tlua(14,16): error TS2300: Duplicate identifier 'run'.


==== tluaDottedFunctionNonEmptyTable.tlua (1 errors) ====
    local Counter = { count = 0, label = "hits" };
    
    function Counter.bump(by: number): number
      Counter.count = Counter.count + by;
      return Counter.count;
    end
    
    local total = Counter.bump(2) + Counter.count;
    local name = Counter.label;
    
    // A dotted declaration may not redeclare a field written in the table itself.
    local Clash = { run = 1 };
    
    function Clash.run(): void
                   ~~~
!!! error TS2300: Duplicate identifier 'run'.
    end
    